--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,4 +1,4 @@
-name: Dependabot Automation
+name: "🤖 Dependabot Automation"
 
 # Automated dependency management with intelligent merge policies
 # Triggers: Dependabot PR opened/updated/reopened
