--- a/.github/workflows/comprehensive-security-audit.yml
+++ b/.github/workflows/comprehensive-security-audit.yml
@@ -1,4 +1,4 @@
-name: Comprehensive Security Audit
+name: "🔒 Comprehensive Security Audit"
 
 # This workflow performs comprehensive security auditing across multiple dimensions
 # Triggers: Daily at 2 AM UTC + can be called by CI workflow + manual dispatch
@@ -23,18 +23,22 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Checkout code
+      - name: "📥 Repository: Checkout Code"
+        # Downloads repository content for comprehensive security analysis
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
-      - name: Setup Bun
+      - name: "⚡ Runtime: Setup Bun Environment"
+        # Configures Bun runtime for dependency analysis and security scanning
         uses: oven-sh/setup-bun@f4d14e03ff726c06358e5557344e1da148b56cf7 # v1
         with:
           bun-version: latest
 
-      - name: Install dependencies
+      - name: "📦 Dependencies: Install Frozen Lockfile"
+        # Installs exact dependencies from lockfile for security analysis
         run: bun install --frozen-lockfile
 
-      - name: Run dependency audit
+      - name: "🔍 Security: Comprehensive Dependency Audit"
+        # Runs bun audit with severity analysis and vulnerability counting
         run: |
           echo "🔍 Running comprehensive dependency audit..."
           audit_output=$(bunx bun audit 2>&1 || true)
@@ -67,7 +71,8 @@ jobs:
           
           echo "✅ No critical or high severity vulnerabilities found."
 
-      - name: Check for vulnerable packages
+      - name: "🛡️ Security: Vulnerable Package Detection"
+        # Uses better-npm-audit to identify packages with known security issues
         run: |
           echo "🔍 Checking for known vulnerable packages..."
           # Check for packages with known security issues
@@ -87,18 +92,22 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Checkout code
+      - name: "📥 Repository: Checkout Code"
+        # Downloads repository content for comprehensive security analysis
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
-      - name: Setup Bun
+      - name: "⚡ Runtime: Setup Bun Environment"
+        # Configures Bun runtime for dependency analysis and security scanning
         uses: oven-sh/setup-bun@f4d14e03ff726c06358e5557344e1da148b56cf7 # v1
         with:
           bun-version: latest
 
-      - name: Install dependencies
+      - name: "📦 Dependencies: Install Frozen Lockfile"
+        # Installs exact dependencies from lockfile for security analysis
         run: bun install --frozen-lockfile
 
-      - name: Run license scan
+      - name: "📋 Legal: License Compliance Analysis"
+        # Scans all dependency licenses for compliance and legal review
         run: |
           echo "📜 Checking license compliance..."
           bunx license-checker --summary
@@ -122,10 +131,12 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Checkout code
+      - name: "📥 Repository: Checkout Code"
+        # Downloads repository content for comprehensive security analysis
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
-      - name: Run secret scan
+      - name: "🔍 Security: Hardcoded Secrets Detection"
+        # Searches source code for hardcoded passwords, API keys, and credentials
         run: |
           echo "🔍 Scanning for hardcoded secrets..."
           
@@ -161,10 +172,12 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Checkout code
+      - name: "📥 Repository: Checkout Code"
+        # Downloads repository content for comprehensive security analysis
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
-      - name: Verify package integrity
+      - name: "🔍 Security: Package Integrity Verification"
+        # Verifies package authenticity and checks for suspicious dependencies
         run: |
           echo "🔍 Verifying package integrity..."
           
@@ -183,7 +196,8 @@ jobs:
           
           echo "✅ Supply chain integrity checks completed"
 
-      - name: Check for typosquatting
+      - name: "🔍 Security: Typosquatting Detection"
+        # Analyzes dependencies for potential typosquatting attacks
         run: |
           echo "🔍 Checking for potential typosquatting packages..."
           
