--- a/package.json
+++ b/package.json
@@ -1,40 +1,8 @@
 {
   "name": "mikrus",
   "version": "0.0.1",
-  "description": "Command-line interface tool for managing VPS servers on mikr.us platform",
+  "description": "Command-line interface tool for managing VPS servers on mikr.us platform (Deno + Cliffy)",
   "private": false,
-  "types": "build/types/types.d.ts",
-  "bin": {
-    "mikrus": "bin/mikrus"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "scripts": {
-    "clean-build": "rimraf -rf ./build",
-    "compile": "tsc -p .",
-    "copy-templates": "cpy 'src/templates/*' build/templates",
-    "build": "bun run clean-build && bun run compile && bun run copy-templates",
-    "prepublishOnly": "bun run build",
-    "format": "biome format --write .",
-    "lint": "biome lint .",
-    "check": "biome check .",
-    "check:fix": "biome check --write .",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
-    "security:audit": "bunx bun audit --json > security-report.json",
-    "security:check": "bunx bun audit 2>&1 | grep -E '(critical|high)' || echo 'No critical/high vulnerabilities'",
-    "security:monitor": "bunx bun audit | grep -E '(critical|high)' && exit 1 || echo 'Security check passed'"
-  },
-  "files": [
-    "build",
-    "LICENSE",
-    "README.md",
-    "docs",
-    "bin"
-  ],
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -45,46 +13,16 @@
     "url": "https://github.com/gander-tools/mikrus/issues"
   },
   "author": {
-    "name": "Adam Gąsowski",
+    "name": "Adam Gąsowski", 
     "url": "https://github.com/gander"
   },
   "keywords": [
     "cli",
-    "vps",
+    "vps", 
     "mikr.us",
     "server-management",
-    "hosting"
-  ],
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/",
-    "provenance": true
-  },
-  "dependencies": {
-    "gluegun": "^5.2.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^2.2.2",
-    "@types/js-yaml": "^4.0.9",
-    "@types/node": "^24.3.0",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "cpy-cli": "^6.0.0",
-    "js-yaml": "^4.1.0",
-    "lefthook": "^1.12.3",
-    "rimraf": "^6.0.1",
-    "tdd-guard-vitest": "^0.1.3",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.9.2",
-    "vitest": "^3.2.4"
-  },
-  "overrides": {
-    "cross-spawn": "^7.0.5",
-    "semver": "^7.6.3",
-    "axios": "^1.7.9",
-    "ejs": "^3.1.10",
-    "lodash": "^4.17.21",
-    "lodash.trim": "npm:lodash@^4.17.21",
-    "lodash.trimend": "npm:lodash@^4.17.21"
-  }
+    "hosting",
+    "deno",
+    "cliffy"
+  ]
 }
